Create Sizemodal for mobile

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -524,7 +524,7 @@
     width: stencilNumber("padding-small") * 3.5;
     height: stencilNumber("padding-small") * 3.5;
     line-height: stencilNumber("padding-small") * 3.5;
-    font-size: fontSize("root");
+    font-size: fontSize("base");
     text-align: center;
     background: stencilColor("color-white");
     z-index: 1;
