--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -100,7 +100,7 @@
             </form>
             <p class="text-left">100% Guaranteed Fit. Free US Shipping + Returns.</p>
             <div class="pdp-fit-links text-left">
-                <a href="#">Can't Find Your Size?</a>
+                <a data-reveal-id="sizeguideModal">Can't Find Your Size?</a>
             </div>
         </div>
 
@@ -112,3 +112,4 @@
 </div>
 
 {{> components/products/modals/fitguide product=product }}
+{{> components/products/modals/sizeguide product=product }}
