--- a/assets/scss/components/foundation/modal/_modal.scss
+++ b/assets/scss/components/foundation/modal/_modal.scss
@@ -42,6 +42,11 @@
     font-size: 26px;
     line-height: remCalc($reveal-close-height);
     padding: 0;
+    color: #000 !important;
+    cursor: pointer;
+    font-size: 40px !important;
+    font-weight: 300;
+    line-height: 1;
     position: absolute;
     text-align: center;
     text-decoration: none;
