--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -641,6 +641,9 @@
     }
 
     .fit-guide {
+        & * {
+            color: stencilColor("navUser-color");
+        }
         .pdp-content__name {
             font-size: fontSize('base') * 1.3;
             line-height: lineHeight("small");
