Fix Recent products section Responsive bugs

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -790,15 +790,23 @@
 }
 
 .recent-products {
-    width: 100vw;
+    width: 100%;
     max-width: unset;
+    text-align: center;
+
+    &.hidden {
+        display: none;
+    }
     
     .section-header {
       margin-bottom: 10px;
       margin-top: 20px;
       padding: 0 10px;
     }
-  
+
+    .slick-arrow {
+        display: none !important;
+    }
   
     .feature-row {
       padding: 0 10px;
@@ -807,5 +815,11 @@
         box-shadow: rgba(0, 0, 0, 0.2) 1px 0 10px 1px;
       }
     }
-  }
+
+    @include breakpoint("medium") {
+        .slick-arrow {
+            display: inline-block !important;
+        }
+    }
+}
   
