--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -113,8 +113,8 @@
 
 </div>
 
-<div class="recent-products">
-    <h4 class="section-header text-uppercase" >Recent Products</h4>
+<div class="recent-products hidden">
+    <h4 class="section-header text-uppercase" >Recently Viewed</h4>
     <div class="recent-products-slick">
     </div>
 </div>
