--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -186,10 +186,6 @@
         margin-bottom: spacing("base");
     }
 
-    .price-section--saving {
-        font-size: fontSize("smaller");
-    }
-
     abbr {
         border: 0;
         color: inherit;
@@ -201,12 +197,12 @@
     .price-section {
         font-size: fontSize("smaller");
 
-        &.non-sale-price--withoutTax {
+        &.rrp-price--withoutTax {
             font-size: 14px;
-            font-weight: 300;
             text-transform: capitalize;
+            font-weight: 300;
             
-            .price--non-sale {
+            .price--rrp {
                 text-decoration: none !important;
                 font-size: 14px;
             }
