Updat Recent products view

--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -11,7 +11,7 @@
     <input type="hidden" id="product_id" value="{{product.id}}" />
     <input type="hidden" id="product_image" value="{{getImage product.main_image 'product_size' (cdn ../theme_settings.default_image_product)}}" />
     <input type="hidden" id="product_url" value="{{product.url}}" />
-
+    <input type="hidden" id="product_title" value="{{product.title}}" />
     <section class="productView-images" data-image-gallery>
         <div class="flexslider">
             <ul class="slides">
