--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -795,20 +795,49 @@
     }
     
     .section-header {
-      margin-bottom: 10px;
-      margin-top: 20px;
-      padding: 0 10px;
+      margin-bottom: stencilNumber("padding-small");
+      margin-top: stencilNumber("padding-small") * 2;
+      padding: 0 stencilNumber("padding-small");
+      text-transform: uppercase;
     }
 
     .slick-arrow {
         display: none !important;
     }
+
+    .slick-track {
+        margin: 0;
+    }
   
     .feature-row {
-      padding: 0 10px;
+      padding: 0 stencilNumber("padding-small");
+      display: inline-block;
+      position: relative;
   
       img {
-        box-shadow: rgba(0, 0, 0, 0.2) 1px 0 10px 1px;
+        box-shadow: rgba(0, 0, 0, 0.2) 1px 0 stencilNumber("padding-small") 1px;
+      }
+      .slick-figoverlay {
+        z-index: 3;
+        bottom: 0;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(255,255,255,.9);
+        text-align: center;
+        transition: .2s;
+        opacity: 0;
+        padding: stencilNumber("padding-small") * 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: fontSize("small");
+        text-transform: uppercase;
+        font-weight: bold;
+        color: stencilColor("navUser-color");
+      }
+      &:hover .slick-figoverlay {
+          opacity: 1;
       }
     }
 
