--- a/templates/components/products/modals/sizeguide.html
+++ b/templates/components/products/modals/sizeguide.html
@@ -4,8 +4,8 @@
     </a>
     <div class="modal-content">
         <div class="fit-guide size-guide">
-            <h2 class="pdp-content__name mt-0">Waitlist</h2>
-            <h3>{{ product.title }}</h3>
+            <h2 class="mt-0">Waitlist</h2>
+            <h3 class="mt-1">{{ product.title }}</h3>
             <div class="mt-3 mb-3">Tell us your size and we'll notify you when this product becomes available.</div>
             {{#each product.options}}
                 {{{dynamicComponent 'components/products/options'}}}
@@ -21,7 +21,7 @@
             </div>
             <div class="mt-4 mb-2 font-weight-normal">Select a size and enter your email above.</div>
             <div class="text-right">
-                <span class="alert-btn disabled">Alert Me!</span>
+                <span class="alert-btn" disabled >Alert Me!</span>
             </div>
         </div>
     </div>
