Update Recent products layout

--- a/assets/scss/components/stencil/productView/_productView.scss
+++ b/assets/scss/components/stencil/productView/_productView.scss
@@ -12,7 +12,7 @@
 
     @include breakpoint("medium") {
         padding-top: spacing("base");
-        max-width: remCalc(960px) !important;
+        max-width: remCalc(1170px) !important;
         margin: auto !important;
     }
 }
@@ -835,8 +835,9 @@
 
 .recent-products {
     width: 100%;
-    max-width: unset;
+    max-width: remCalc(1170px);
     text-align: center;
+    margin: auto;
 
     &.hidden {
         display: none;
