Add functionalities to control skus

--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -12,6 +12,8 @@
     <input type="hidden" id="product_image" value="{{getImage product.main_image 'product_size' (cdn ../theme_settings.default_image_product)}}" />
     <input type="hidden" id="product_url" value="{{product.url}}" />
     <input type="hidden" id="product_title" value="{{product.title}}" />
+    <input type="hidden" id="product_sku" value="{{product.sku}}" />
+
     <section class="productView-images" data-image-gallery>
         <div class="flexslider">
             <ul class="slides">
