Update waist and length, size variant options bundling

--- a/assets/scss/components/citadel/forms/_forms.scss
+++ b/assets/scss/components/citadel/forms/_forms.scss
@@ -132,6 +132,12 @@
 //
 // -----------------------------------------------------------------------------
 
+.form-label {
+    &.hidden {
+        display: hidden;
+    }
+}
+
 .form-label--alternate {
     font-family: fontFamily("headingSans");
     font-size: fontSize("smallest");
@@ -281,6 +287,10 @@
     .form-radio:checked + & {
         border-color: stencilColor("checkRadio-color");
         box-shadow: 0 0 0 1px stencilColor("checkRadio-color");
+    }
+
+    &.hidden {
+        display: none;
     }
 }
 
