--- a/templates/components/products/modals/sizeguide.html
+++ b/templates/components/products/modals/sizeguide.html
@@ -7,22 +7,47 @@
             <h2 class="mt-0">Waitlist</h2>
             <h3 class="mt-1">{{ product.title }}</h3>
             <div class="mt-3 mb-3">Tell us your size and we'll notify you when this product becomes available.</div>
-            {{#each product.options}}
-                {{{dynamicComponent 'components/products/options'}}}
-            {{/each}}
-            <div>
-                <div class="optionSelector">Comments</div>
-                <textarea class="form-control" rows="3"></textarea>
-                <div class="optionSelector">Enter Your Email</div>
-                <input type="email" name="email" id="email" placeholder="Email" class="form-control"
-                    required="required">
-                <input type="hidden" value="product.sku" autocomplete="off">
-                <span class="hidden">A valid email address is required</span>
-            </div>
-            <div class="mt-4 mb-2 font-weight-normal">Select a size and enter your email above.</div>
-            <div class="text-right">
-                <span class="alert-btn" disabled >Alert Me!</span>
-            </div>
+            <form>
+                {{#each product.options}}
+                    {{#if this.type '===' 'Configurable_PickList_Set' }}
+                        <div class="sizeguide-field">
+                            <label class="label--alternate">
+                                {{this.display_name}}:
+                            </label>
+                            
+                            {{#each this.values}}
+                                <input
+                                    class="form-radio"
+                                    type="checkbox"
+                                    data-sku="{{../id}}"
+                                    value="{{id}}"
+                                    id="sizeguide_{{../id}}_{{id}}"
+                                    {{#if selected}}
+                                        checked
+                                        data-default
+                                    {{/if}}
+                                    {{#if ../required}}required{{/if}}>
+                                <label class="form-option" for="sizeguide_{{../id}}_{{id}}" data-product-attribute-value="{{id}}">
+                                    <span class="form-option-variant">{{this.label}}</span>
+                                </label>
+                            {{/each}}
+                        </div>
+                    {{/if}}
+                {{/each}}
+                <div class="user-comments">
+                    <div class="optionSelector">Comments</div>
+                    <textarea class="form-control" rows="3"></textarea>
+                    <div class="optionSelector">Enter Your Email</div>
+                    <input type="email" name="email" id="email" placeholder="Email" class="form-control"
+                        required="required">
+                    <input type="hidden" value="product.sku" autocomplete="off">
+                    <span class="hidden">A valid email address is required</span>
+                </div>
+                <div class="mt-4 mb-2 font-weight-normal">Select a size and enter your email above.</div>
+                <div class="text-right">
+                    <span class="alert-btn" disabled >Alert Me!</span>
+                </div>
+            </form>
         </div>
     </div>
     <div class="loadingOverlay"></div>
