Fix fit guide image missing issues

--- a/templates/components/products/modals/fitguide.html
+++ b/templates/components/products/modals/fitguide.html
@@ -14,7 +14,7 @@
       <div class="tab-section-content">
         <div class="tab-content__item active">
           {{#each product.custom_fields}}
-            {{#if name 'FitguideImage' }}
+            {{#if name 'fitguide_image' }}
               <img
                 class="lazy size-chart" data-src="{{value}}"
               >
