--- a/templates/components/products/options/swatch.html
+++ b/templates/components/products/options/swatch.html
@@ -25,8 +25,8 @@
                 {{/if}}
             {{/if}}
             {{#if pattern}}
-                <span class="form-option-expanded">
-                    <span class="form-option-image" style="background-image: url('{{getImage image 'core-swatch'}}');"></span>
+                <span class="form-option-expandeds">
+                    {{this.label}}
                 </span>
             {{/if}}
         </label>
