Create Afterpay Modal

--- a/assets/scss/components/_components.scss
+++ b/assets/scss/components/_components.scss
@@ -200,3 +200,6 @@
 
 // HomeMantra Methods
 @import "stencil/homeMantra/component";
+
+// Afterpay Modal Methods
+@import "stencil/afterpayModal/component";
