--- a/templates/components/products/afterpay.html
+++ b/templates/components/products/afterpay.html
@@ -5,8 +5,7 @@
       src="https://static.afterpay.com/integration/product-page/logo-afterpay-colour.png"
       srcset="https://static.afterpay.com/integration/product-page/logo-afterpay-colour.png 1x, https://static.afterpay.com/integration/product-page/logo-afterpay-colour@2x.png 2x, https://static.afterpay.com/integration/product-page/logo-afterpay-colour@3x.png 3x"
       style="vertical-align: middle; max-width: 100px;">
-    &nbsp;
-    <a class="afterpay-link" tabindex="0"
+    <a class="afterpay-link" tabindex="0" data-reveal-id="afterpay-modal"
       style="cursor: pointer; color: inherit; text-decoration: none; display: inline-block;">ⓘ</a>
   </span>
 </p>
