--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -129,3 +129,4 @@
 
 {{> components/products/modals/fitguide product=product }}
 {{> components/products/modals/sizeguide product=product }}
+{{> components/products/modals/afterpay }}
