--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -5,28 +5,30 @@
             <a class="navPage-subMenu-action navPages-action" href="{{url}}">{{lang 'category.view_all.name' category=name}}</a>
         </li>
         {{#each children}}
-                {{#if children}}
-                    <li class="navPage-subMenu-item">
-                        <a
-                            class="navPage-subMenu-action navPages-action has-subMenu{{#if is_active}} activePage{{/if}}"
-                            href="{{url}}"
-                            data-collapsible="navPages-{{id}}"
-                            data-collapsible-disabled-breakpoint="medium"
-                            data-collapsible-disabled-state="open"
-                            data-collapsible-enabled-state="closed">
-                            {{name}}
-                        </a>
-                    </li>
-                    {{#each children}}
-                        <li class="navPage-childList-item">
-                            <a class="navPage-childList-action navPages-action{{#if is_active}} activePage{{/if}}" href="{{url}}">{{name}}</a>
-                        </li>
-                    {{/each}}
-                {{else}}
-                    <li class="navPage-subMenu-item">  
-                        <a class="navPage-subMenu-action navPages-action{{#if is_active}} activePage{{/if}}" href="{{url}}">{{name}}</a>
-                    </li>
-                {{/if}}
+            {{#if children}}
+                <li class="navPage-subMenu-item">
+                    <a
+                        class="navPage-subMenu-action navPages-action has-subMenu{{#if is_active}} activePage{{/if}}"
+                        href="{{url}}"
+                        data-collapsible="navPages-{{id}}"
+                        data-collapsible-disabled-breakpoint="medium"
+                        data-collapsible-disabled-state="open"
+                        data-collapsible-enabled-state="closed">
+                        {{name}}
+                    </a>
+                </li>
+                {{#each children}}
+                    {{#if (length (split name "_SubCategory")) '===' 2}}
+                        {{#each (split name "_SubCategory") }}
+                            {{#if @first }}
+                                <li class="navPage-childList-item">
+                                    <a class="navPage-childList-action navPages-action" href="{{url}}">{{this}}</a>
+                                </li>
+                            {{/if}}
+                        {{/each}}
+                    {{/if}}
+                {{/each}}
+            {{/if}}
         {{/each}}
     </ul>
 </div>
