--- a/templates/components/common/breadcrumbs.html
+++ b/templates/components/common/breadcrumbs.html
@@ -1,7 +1,7 @@
 <ul class="breadcrumbs" itemscope itemtype="http://schema.org/BreadcrumbList">
-    {{#unless theme_settings.hide_breadcrumbs }}
-        {{#each breadcrumbs}}
-            <li class="breadcrumb {{#if @last}}is-active{{/if}}" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+    {{#each breadcrumbs}}
+        {{#unless @last}}
+            <li class="breadcrumb" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
                 {{#or @last (if url "==" null)}}
                     <meta itemprop="item" content="{{url}}">
                     <span class="breadcrumb-label" itemprop="name">{{name}}</span>
@@ -10,6 +10,6 @@
                 {{/or}}
                 <meta itemprop="position" content="{{add @index 1}}" />
             </li>
-        {{/each}}
-    {{/unless}}
+        {{/unless}}
+    {{/each}}
 </ul>
