--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -15,40 +15,46 @@ category:
 {{/partial}}
 
 {{#partial "page"}}
+    <div class="main-container">
+        {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-{{#if category.image}}
-    <img class="lazyload" data-sizes="auto" src="{{cdn 'img/loading.svg'}}" data-src="{{getImage category.image 'zoom_size'}}">
-{{/if}}
-{{#unless theme_settings.hide_category_page_heading }}
-    <h1 class="page-heading">{{category.name}}</h1>
-{{/unless}}
-{{{category.description}}}
-<div class="page">
-    {{#if category.faceted_search_enabled}}
-        <aside class="page-sidebar" id="faceted-search-container">
-            {{> components/category/sidebar}}
-        </aside>
-    {{else if category.subcategories}}
-        <aside class="page-sidebar" id="faceted-search-container">
-            {{> components/category/sidebar}}
-        </aside>
-    {{else if category.shop_by_price}}
-        {{#if theme_settings.shop_by_price_visibility}}
-             <aside class="page-sidebar" id="faceted-search-container">
-                {{> components/category/sidebar}}
-            </aside>
-        {{/if}}
-    {{/if}}
+        <div class="page">
+            {{#if category.faceted_search_enabled}}
+                <aside class="page-sidebar" id="faceted-search-container">
+                    {{> components/category/sidebar}}
+                </aside>
+            {{else if category.subcategories}}
+                <aside class="page-sidebar" id="faceted-search-container">
+                    {{> components/category/sidebar}}
+                </aside>
+            {{else if category.shop_by_price}}
+                {{#if theme_settings.shop_by_price_visibility}}
+                    <aside class="page-sidebar" id="faceted-search-container">
+                        {{> components/category/sidebar}}
+                    </aside>
+                {{/if}}
+            {{/if}}
 
-    <main class="page-content" id="product-listing-container">
-        {{#if category.products}}
-            {{> components/category/product-listing}}
-        {{else}}
-            <p>{{lang 'categories.no_products'}}</p>
-        {{/if}}
-    </main>
-</div>
-
+            <main class="page-content" id="product-listing-container">
+                {{#if category.image}}
+                    <img class="lazyload" data-sizes="auto" src="{{cdn 'img/loading.svg'}}" data-src="{{getImage category.image 'zoom_size'}}">
+                {{/if}}
+                <h1 class="page-heading">{{category.name}}</h1>
+                <div style="padding-top: 20px;">
+                    {{{category.description}}}
+                </div>
+                {{#each category.subcategories}}
+                    <div class="subcategory-list">
+                        <h3 class="title">/&nbsp;{{name}}</h3>
+                        {{#if products}}
+                            {{> components/category/product-listing}}
+                        {{else}}
+                            <p>{{lang 'categories.no_products'}}</p>
+                        {{/if}}
+                    </div>
+                {{/each}}
+            </main>
+        </div>
+    </div>
 {{/partial}}
 {{> layout/base}}
