Fix Home page breadcrumbs issue

--- a/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
+++ b/assets/scss/components/foundation/breadcrumbs/_breadcrumbs.scss
@@ -16,6 +16,7 @@
     padding: stencilNumber("padding-small") * 2 0;
     border-bottom: solid 1px lightgray;
     border-top: solid 1px lightgray;
+    display: none;
 }
 
 .breadcrumb {
