--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -15,7 +15,7 @@ category:
 {{/partial}}
 
 {{#partial "page"}}
-    <div class="main-container">
+    <div class="category main-container">
         {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
         <div class="page">
