--- a/assets/scss/category/_component.scss
+++ b/assets/scss/category/_component.scss
@@ -1,15 +1,19 @@
 .subcategory-list {
-
   .title {
     font-size: 16px;
     color: stencilColor("navUser-color");
     font-weight: fontWeight("semibold");
     padding: 1rem 0;
+    margin: 0;
   }
 }
 
 .category {
   .breadcrumbs {
-    display: block;
+    display: none;
+
+    @include breakpoint("medium") {
+      display: block;
+    }
   }
 }
